--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,9 @@
 version: "3"
 services:
-  db:
-    image: postgres
-    ports:
-      - 5432:5432
-    expose:
-      - 5432
   server:
     build: .
     expose:
-      - 5000
+      - 80
     ports:
-      - 5000:5000
+      - 80:80
+    image: ${IMAGE_URI}
